k8s/ingress/apps-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: aws-ingress-class
  annotations:
    ingressclass.kubernetes.io/is-default-class: "true"
spec:
  controller: ingress.k8s.aws/alb

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apps-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
spec:
  ingressClassName: aws-ingress-class
  defaultBackend:
    service:
      name: kibana-service
      port:
        number: 9000
  rules:
    - http:
        paths:
          - path: /movements
            pathType: Prefix 
            backend:
              service:
                name: movements-api-cluster-ip-service
                port:
                  number: 9000
          - path: /kibana
            pathType: Prefix
            backend:
              service:
                name: kibana-service
                port:
                  number: 9000
